--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ body {
     background-position: top;
 }
 
+/* .container {
+    margin-left: auto;
+    margin-right: auto;
+} */
+
 .mian-h {
     /* color: aliceblue; */
     text-align: center;
@@ -13,14 +18,13 @@ body {
 }
 
 .photo {
-    position: absolute;
     z-index: 1;
+    border-radius: 15px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     width: 600px;
     height: 600px;
-    border-radius: 15px;
     transition: all 400ms ease-in-out;
 }
 
@@ -30,9 +34,9 @@ body {
 }
 
 .photo-skills {
-    position: relative;
     margin-top: 50px;
     display: flex;
+    margin-bottom: 100px;
 }
 
 .skills-h {
@@ -41,13 +45,11 @@ body {
 }
 
 .skills {
+    margin-left: 100px;
     z-index: 1;
-    position: absolute;
-    right: 50px;
     border-radius: 25px;
     padding: 35px 25px;
     background-color: black;
-    margin-left: 50px;
     color: aliceblue;
     transition: all 400ms ease-in-out;
 }
@@ -55,4 +57,22 @@ body {
 .skills:hover {
     z-index: 2;
     transform: scale(1.5);
+}
+
+.gallery {
+    position: relative;
+    margin-top: 100px;
+}
+
+.gallery-h {
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.card-img {
+    margin-bottom: 25px;
+}
+
+.title-card {
+    text-align: center;
 }
